# collision

./: .gitignore  Dockerfile  README.md  collision.cl  collision.py  misc.py  pyproject.toml  radix.cl  radix.py  reduce.cl  reduce.py  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
collision/: bounds.py  collision.cl  collision.py  index.cl  index.py  local_scan.cl  misc.py  offset.cl  offset.py  radix.cl  radix.py  reduce.cl  reduce.py  scan.cl  scan.py
python/: MANIFEST.in
python/collision/: bounds.py  index.py  local_scan.cl  offset.cl  offset.py  summer.py
python/tests/: test_scan.py  test_scan_py.py
python/tests/benchmarks/: test_bounds.py  test_collide.py  test_radix.py  test_scan.py
rust/: Cargo.toml  collision.nix  default.nix
rust/benches/: collision.rs  node.js
rust/src/: bounds.rs  lib.rs  morton.rs
tests/: common.py  test_bounds_py.py  test_collision.py  test_collision_py.py  test_index.py  test_misc.py  test_offset.py  test_offset_py.py  test_radix.py  test_radix_py.py  test_reducer_py.py  test_scan.py  test_scan_py.py  test_summer_py.py
tests/benchmarks/: test_bounds.py  test_collide.py  test_offset.py  test_radix.py  test_reduce.py  test_scan.py
