[package]
name = "rust"
version = "0.1.0"
authors = ["Kai Wohlfahrt <kai.wohlfahrt@gmail.com>"]
edition = "2018"

[lib]
name = "collision"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.2"
wasm-bindgen-cli = "0.2"
