[package]
name = "collision"
version = "0.1.0"
authors = ["Kai Wohlfahrt <kai.wohlfahrt@gmail.com>"]
edition = "2018"
repository = "https://github.com/kwohlfahrt/collision.git"
license = "GPL-3.0"
description = "Fast and simple approximate collision detection"

[lib]
name = "collision"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
smallvec = "1.2"

[dev-dependencies]
rand = "0.7"
criterion = "0.3"

[profile.bench]
debug = true

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.2"
wasm-bindgen-cli = "0.2"
js-sys = "0.3"

[[bench]]
name = "collision"
harness = false
